--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,3 +1,6 @@
+[phases.start]
+commands = ["flask run --host=0.0.0.0 --port=8000"]
+
 [phases.setup]
 # Comandos que devem ser executados na fase de setup
 commands = [
